[package]
name = "rusty_space"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.16.0", features = ["trace"] }
bevy_egui = "0.34.1"
image = "0.25.6"
hexx = { version = "0.20.0", features = ["serde"] }
leafwing_manifest = { version = "0.3.0", features = [] }
paste = "1.0.15"
rand = "0.8.5"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
camera = { path = "crates/camera" }
common = { path = "crates/common" }

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
hexx = { workspace = true }
leafwing_manifest = { workspace = true }
#iyes_perf_ui = "0.4.0"
rand = { workspace = true }
serde = { workspace = true }
camera = { workspace = true }
common = { workspace = true }

[dev-dependencies]
test_utils = { path = "crates/test_utils" }

[patch.crates-io]
# iyes_perf_ui = { git = "https://github.com/Affinator/iyes_perf_ui.git", rev = "cec8ff80a33dae570eb9af59b60b5c298e192f80" }
leafwing_manifest = { path = "../leafwing_manifest" }

