[package]
name = "rusty_space"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["trace"] }
bevy_egui = "0.34.1"
image = "0.25.6"
hexx = { version = "0.21.0", features = ["serde"] }
leafwing_manifest = { version = "0.4.0", features = [] }
paste = "1.0.15"
rand = "0.8.5"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Internal depedencies
camera = { path = "crates/camera" }
common = { path = "crates/common" }
entity_spawners = { path = "crates/entity_spawners" }
entity_selection = { path = "crates/entity_selection" }
pathfinding = { path = "crates/pathfinding" }
persistence = { path = "crates/persistence" }
ship_user_controller = { path = "crates/ship_user_controller" }
simulation = { path = "crates/simulation" }
test_utils = { path = "crates/test_utils" }
universe_builder = { path = "crates/universe_builder" }
universe_loader = { path = "crates/universe_loader" }

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
hexx = { workspace = true }
iyes_perf_ui = "0.5.0"

# Internal dependencies
camera = { workspace = true }
common = { workspace = true }
entity_spawners = { workspace = true }
entity_selection = { workspace = true }
persistence = { workspace = true }
ship_user_controller = { workspace = true }
simulation = { workspace = true }
universe_builder = { workspace = true }
universe_loader = { workspace = true }

[dev-dependencies]
test_utils = { path = "crates/test_utils" }

[patch.crates-io]
#iyes_perf_ui = { git = "https://github.com/olekspickle/iyes_perf_ui.git" }#, rev = "0ff2fe342e30857980746070ead95706d03036e1" }

