[package]
name = "ship_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }

# internal dependencies
common = { workspace = true }
pathfinding = { workspace = true }

[dev-dependencies]
hexx = { workspace = true }
persistence = { workspace = true }
universe_builder = { workspace = true }
test_utils = { workspace = true }
